# REST_API

./: .gitignore  dev-docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
REST_API/: schemas.py
REST_API/conf/: config.py
REST_API/database/: db.py  models.py
REST_API/repository/: auth.py  contact.py
REST_API/routes/: auth.py  contact.py  users.py
REST_API/services/: auth.py  email.py
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 1c2b43eeed22_user_confirmed.py  3ad7ec2d6bbd_init.py  54f198a4df20_updated_models.py
tests/: conftest.py  test_route_auth.py  test_unit_repository_auth.py  test_unit_repository_contact.py
